[package]
name = "flare"
version = "0.1.0"
edition = "2021"
authors = ["blackstar257 <4362234+blackstar257@users.noreply.github.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0", features = ['http'] }
worker-macros = { version = "0.6.0", features = ['http'] }
console_error_panic_hook = { version = "0.1.7" }
http = "1.3"
